--- a/srfi-249.html
+++ b/srfi-249.html
@@ -16,6 +16,13 @@ implementation)
 
 <h2 id="status">Status</h2>
 
+    <p>This SRFI is currently in <em>draft</em> status.  Here is <a href="https://srfi.schemers.org/srfi-process.html">an explanation</a> of each status that a SRFI can hold.  To provide input on this SRFI, please send email to <code><a href="mailto:srfi+minus+249+at+srfi+dotschemers+dot+org">srfi-249@<span class="antispam">nospam</span>srfi.schemers.org</a></code>.  To subscribe to the list, follow <a href="https://srfi.schemers.org/srfi-list-subscribe.html">these instructions</a>.  You can access previous messages via the mailing list <a href="https://srfi-email.schemers.org/srfi-249/">archive</a>.</p>
+    <ul>
+      <li>Received: 2023-11-11</li>
+      <li>60-day deadline: 2024-01-12</li>
+      <li>Draft #1 published: 2023-11-13</li>
+    </ul>
+
 <p style="color: red;">For editor's use only.  Please do not edit this section.</p>
 
 <p>??? the draft/final/withdrawn status of the SRFI, information on how
