fix github link

--- a/srfi-249.html
+++ b/srfi-249.html
@@ -252,7 +252,7 @@ subobjects.</p>
 
 <h2 id="implementation">Implementation</h2>
 <p>The implementation is available at
-<a href="https://github/scheme-requests-for-implementation/srfi-249">Github</a>.
+<a href="https://github.com/scheme-requests-for-implementation/srfi-249">Github</a>.
 
 <h2 id="acknowledgements">Acknowledgements</h2>
 
