Add SPDX declarations.

--- a/srfi-249.html
+++ b/srfi-249.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!--
+      SPDX-FileCopyrightText: Taylor Campbell, John Cowan
+      SPDX-License-Identifier: MIT
+    -->
   <head>
     <meta charset="utf-8">
     <title>SRFI 249: Restarting conditions</title>
