--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <h1>SRFI 249: Restarting conditions</h1>
       <p class="authors">by John Cowan</p>
       <p class="based-on"></p>
-      <p class="status">status: <em>draft</em> (2023-11-13)</p>
-      <p class="keywords">keywords: <a href="https://srfi.schemers.org/?keywords=exceptions">Exceptions</a></p>
+      <p class="status">status: <em>withdrawn</em> (2024-09-13)</p>
+      <p class="keywords">keywords: <a href="https://srfi.schemers.org/?keywords=exceptions">Exceptions</a></p><span class="see-also">See also <a href="/srfi-255/">SRFI 255: Restarting conditions</a>.</span>
       <ul class="info">
         <li><a href="srfi-249.html">The SRFI Document</a></li>
         <li><a href="https://srfi-email.schemers.org/srfi-249/">Discussion Archive</a></li>
@@ -29,4 +29,4 @@
         <li><span class="firefox-column-workaround">
             <form method="POST" action="https://www.simplelists.com/subscribe.php">
               <div class="title">Unsubscribe from srfi-249 mailing list</div><input name="email" placeholder="email address" tabindex="5" type="email"><input class="submit" name="submit" tabindex="6" type="submit" value="Unsubscribe from srfi-249"><input type="hidden" name="action" value="unsubscribe"><input name="list" type="hidden" value="srfi-249@srfi.schemers.org"></form></span></li></ul>
-      <h2>Abstract</h2><p>When an exceptional situation is encountered by a program, it may create a <em>condition</em> object describing the situation and then signal the condition and pass control to a condition handler. The signaler and handler are two different parts of a system, between which there is a barrier of abstraction. In order to recover gracefully and flexibly from exceptional situations, however, the signaler can provide multiple ways by which the handler can restart the computation, some of which may require extra input. Often, the decision of which method of recovery to choose is left up to a human user, who may be prompted for the input needed to recover. This SRFI proposes a simple mechanism called <em>restarters</em> to encapsulate the information necessary to restart a computation with associated interactive prompters.</p> </p></body></html>
+      <h2>Abstract</h2><p>When an exceptional situation is encountered by a program, it may create a <em>condition</em> object describing the situation and then signal the condition and pass control to a condition handler. The signaler and handler are two different parts of a system, between which there is a barrier of abstraction. In order to recover gracefully and flexibly from exceptional situations, however, the signaler can provide multiple ways by which the handler can restart the computation, some of which may require extra input. Often, the decision of which method of recovery to choose is left up to a human user, who may be prompted for the input needed to recover. This SRFI proposes a simple mechanism called <em>restarters</em> to encapsulate the information necessary to restart a computation with associated interactive prompters.</p></body></html>
