Store local copy of Campbell's proposal

--- a/srfi-249.html
+++ b/srfi-249.html
@@ -268,8 +268,7 @@ subobjects.</p>
 <h2 id="acknowledgements">Acknowledgements</h2>
 
 <p>This SRFI is based on
-<a href="https://mumble.net/~campbell/proposals/restart.text">a
-proposal</a> by Taylor Campbell.</p>
+<a href="restart.text">a proposal</a> by Taylor Campbell.</p>
 
 <h2 id="copyright">Copyright</h2>
 <p>&copy; 2023 Taylor Campbell, John Cowan, Wolfgang
